[package]
name = "kawa"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>", "ParadoxSpiral <ParadoxSpiral@riseup.net>"]

[dependencies]
kaeru = { path = "kaeru" }
shout = "0.1.6"
libc = "0.2"
toml = "0.4"
slog = "2"
slog-term = "2"
slog-async = "2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.7"
lazy_static = "*"
