[package]
name = "kawa"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>", "ParadoxSpiral <ParadoxSpiral@riseup.net>"]

[features]
default = []
nightly = []

[dependencies]
kaeru = { path = "kaeru" }
toml = "0.4"
slog = "2"
slog-term = "2"
slog-async = "2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.7"
rouille = "1.0.2"
amy = "0.8.1"
httparse = "1.2.3"
url = "1.5"
